; ModuleID = '/home/carl/AnghaBench/openssl/crypto/aes/extr_aes_ecb.c_AES_ecb_encrypt.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/aes/extr_aes_ecb.c_AES_ecb_encrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AES_ENCRYPT = common dso_local global i32 0, align 4
@AES_DECRYPT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AES_ecb_encrypt(i8* %0, i8* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i8*, i8** %5, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %11, label %17

11:                                               ; preds = %4
  %12 = load i8*, i8** %6, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %17

14:                                               ; preds = %11
  %15 = load i32*, i32** %7, align 8
  %16 = icmp ne i32* %15, null
  br label %17

17:                                               ; preds = %14, %11, %4
  %18 = phi i1 [ false, %11 ], [ false, %4 ], [ %16, %14 ]
  %19 = zext i1 %18 to i32
  %20 = call i32 @assert(i32 %19)
  %21 = load i32, i32* @AES_ENCRYPT, align 4
  %22 = load i32, i32* %8, align 4
  %23 = icmp eq i32 %21, %22
  br i1 %23, label %28, label %24

24:                                               ; preds = %17
  %25 = load i32, i32* @AES_DECRYPT, align 4
  %26 = load i32, i32* %8, align 4
  %27 = icmp eq i32 %25, %26
  br label %28

28:                                               ; preds = %24, %17
  %29 = phi i1 [ true, %17 ], [ %27, %24 ]
  %30 = zext i1 %29 to i32
  %31 = call i32 @assert(i32 %30)
  %32 = load i32, i32* @AES_ENCRYPT, align 4
  %33 = load i32, i32* %8, align 4
  %34 = icmp eq i32 %32, %33
  br i1 %34, label %35, label %40

35:                                               ; preds = %28
  %36 = load i8*, i8** %5, align 8
  %37 = load i8*, i8** %6, align 8
  %38 = load i32*, i32** %7, align 8
  %39 = call i32 @AES_encrypt(i8* %36, i8* %37, i32* %38)
  br label %45

40:                                               ; preds = %28
  %41 = load i8*, i8** %5, align 8
  %42 = load i8*, i8** %6, align 8
  %43 = load i32*, i32** %7, align 8
  %44 = call i32 @AES_decrypt(i8* %41, i8* %42, i32* %43)
  br label %45

45:                                               ; preds = %40, %35
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @AES_encrypt(i8*, i8*, i32*) #1

declare dso_local i32 @AES_decrypt(i8*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
